--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,7 +7,7 @@
 <div th:replace="~{menu :: menu}"></div>
 
 <div id="content" class="container">
-  <h2>Okta Hosted Login + Spring Boot Example.RECORD 28/8/2025</h2>
+  <h2>Okta Hosted Login + Spring Boot Example.RECORD FINAL 28/8/2025</h2>
 
   <div th:unless="${#authorization.expression('isAuthenticated()')}">
     <p>Hello!</p>
